--- a/view/catalog.html
+++ b/view/catalog.html
@@ -87,43 +87,64 @@
 							
 						</ul>
 					</div>
-					<div class="text_user">
+				</div>
+				<div class="CommentArea">
+				 <div class="text_user">
 						<a href="javascript:;"><img src="../img/sss8.jpg"/ ></a>
 						<ul class="mes_head">
-							<li style="margin-top:5px;">
-								<a href="javascript:;" class="user_a" title="我是我是我我是我是我我是我是我我是我是我我是我是我我是我是我我是">明珠求瑕</a>
+							<li class="mes_head_user" >
+								<a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
 								<a href="javascript:;" class="user_Top">置顶</a></li>
-							<li><span class="user_comment" title="">
-									我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八
-								</span>
-							</li>	
+							<li><span class="user_comment" title="">我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八</span></li>	
 							<li>
 							  <ul class="updata_mes">
 							      <li class="mess1">1楼</li>
 							      <li class="mess1">2016-12-12</li>
 							      <li class="mess1">18：00</li>
-							      <li class="mess1">回复</li>
-							      <li class="mess1">举报</li>
+							      <li class="mess2">回复</li>
+							      <li class="mess3">举报</li>
 							  </ul>
 							</li>
 						</ul>
-				
-					
-					<div class="text_Reply">
-						<div  class="text_Reply_user">
-							<div class="text_Reply_uesr_img"></div>		
-						    <div class="text_Reply_uesr_name" >
-						    	<div class="text_Reply_content"><a>huhuf5</a>:<span>许为知己犹按剑，纵使负心敌难为。</span></div>
-						    	<div class="text_Reply_content_time"><span>8月6日12：31</span></div>
-						    </div>
-						</div>
+				  </div >
+				  <div class="text_userTow">
+				      <a href="javascript:;"><img src="../img/smallHead.png"/ ></a>
+              <ul class="mes_head">
+                <li class="mes_head_user" >
+                  <a href="javascript:;" class="user_a" title="">浩浩荡荡荡乾坤</a>
+                <li><span class="user_comment"  title="">我是比企······我是比企谷八幡比企谷骄傲是看了的就爱上看了就快乐的骄傲是看了打赏谷八幡比企谷八</span> </li> 
+                <li>
+                  <ul class="updata_mes">
+                      <li class="mess1">2016-12-12</li>
+                      <li class="mess1">18：00</li>
+                      <li class="mess2">回复</li>
+                      <li class="mess3">举报</li>
+                  </ul>
+                </li>
+              </ul>
 					</div>
-					
+					<div class="text_userTow">
+              <a href="javascript:;"><img src="../img/smallHead.png"/ ></a>
+              <ul class="mes_head">
+                <li class="mes_head_user" >
+                  <a href="javascript:;" class="user_a" title="">明珠求瑕</a>
+                <li><span class="user_comment"  title="">回复<span class="aite_user">@纷纷扰扰扰红尘</span>·我是比企谷八幡比企谷骄傲是看了的就爱上看了就快乐的骄傲是看了打赏谷八幡比企谷八</span> </li> 
+                <li>
+                  <ul class="updata_mes">
+                      <li class="mess1">2016-12-12</li>
+                      <li class="mess1">18：00</li>
+                      <li class="mess2">回复</li>
+                      <li class="mess3">举报</li>
+                  </ul>
+                </li>
+              </ul>
+          </div>
 				</div>
 				
+				<div style="height: 300px;"></div>
 				
 					
-			</div>
+			
 			
 			
 			<div class="screen">
