--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1382,29 +1382,54 @@
 	width: 670px;
 	margin: 25px 15px 25px 10px;
 	vertical-align: baseline;
+	position: relative;
 }
 
 .attention-name .attention-name-sex {
 	margin-left: 15px;
 }
 
+
 .attention-name .wordAI {
-	display: inline-block;
+	position: absolute ;
+	left: 420px;
+	
+	border: 1px solid #3DB2D8;
 	width: 55px;
-	height: 20px;
-	background-color: #3db2d8;
-	border-radius: 8px;
-	text-align: center;
-	color: white;
-	margin-left: 50px;
-	line-height: 20px;
-	font-size: 12px;
-	margin-left: 400px;
-	cursor: pointer;
+  height: 20px;
+  display: inline-block;
+  border-radius: 8px;
+  text-align: center;
+  color:#3DB2D8 ;
+  line-height: 18px;
+  cursor: pointer;
 }
 
 .attention-name .wordAI:hover {
-	background-color: #00A1D6;
+    border: 1px solid #00A1D6;
+    color:#00A1D6 ;
+
+}
+
+.attention-name .wordAI2 {
+  position:  absolute ;
+  left: 420px;
+  
+  background-color:#3DB2D8;
+  width: 55px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 8px;
+  text-align: center;
+  color:white ;
+  line-height: 19px;
+  cursor: pointer;
+}
+
+.attention-name .wordAI2:hover {
+    background-color: #00A1D6;
+    
+
 }
 
 .attention-name span {
