--- a/view/catalog.html
+++ b/view/catalog.html
@@ -89,13 +89,13 @@
 					</div>
 				</div>
 				<div class="CommentArea">
-				 <div class="text_user">
+				 <div class="text_user clear">
 						<a href="javascript:;"><img src="../img/sss8.jpg"/ ></a>
 						<ul class="mes_head">
 							<li class="mes_head_user" >
 								<a href="javascript:;" class="user_a" title="">纷纷扰扰扰红尘</a>
 								<a href="javascript:;" class="user_Top">置顶</a></li>
-							<li><span class="user_comment" title="">我是比企······我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八</span></li>	
+							<li><span class="user_comment" title="">我是比企······我比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八我是比企谷八幡比企谷八幡比企谷八幡比企谷八</span></li>	
 							<li>
 							  <ul class="updata_mes">
 							      <li class="mess1">1楼</li>
@@ -107,7 +107,7 @@
 							</li>
 						</ul>
 				  </div >
-				  <div class="text_userTow">
+				  <div class="text_userTow clear">
 				      <a href="javascript:;"><img src="../img/smallHead.png"/ ></a>
               <ul class="mes_head">
                 <li class="mes_head_user" >
@@ -123,7 +123,7 @@
                 </li>
               </ul>
 					</div>
-					<div class="text_userTow">
+					<div class="text_userTow clear ">
               <a href="javascript:;"><img src="../img/smallHead.png"/ ></a>
               <ul class="mes_head">
                 <li class="mes_head_user" >
@@ -139,7 +139,14 @@
                 </li>
               </ul>
           </div>
+          <ul class="Publish">
+            <li class="user_head"><a href="javascript:;"><img src="../img/sss8.jpg"/></a></li>
+            <li ><textarea></textarea></li>
+            <li class="MessageBtn"><span>发表评论</span></li>
+          </ul>
+          <div class="hr"></div>
 				</div>
+				
 				
 				<div style="height: 300px;"></div>
 				
