--- a/view/class.html
+++ b/view/class.html
@@ -11,7 +11,7 @@
   </head>
   <body class="class-body" id="app">
     <myheader></myheader>
-    <div class="class-content">
+    <div class="class-content" style="min-height: 700px;">
       <div class="class-title">
         <div class="class-title-line">
           <label class="class-label">排序:</label>
