--- a/css/index.css
+++ b/css/index.css
@@ -867,9 +867,6 @@
 	.imgHeadPortrait {
 	  height: 46px;
 	  width: 46px;
-	  background: url(../img/LOG0.png) no-repeat ;
-    background-position:center center;
-	  background-color: #F0F0F0;
 	  border-radius: 64px;
 	}
 	.bookImg_Sl {
@@ -877,6 +874,7 @@
     width: 60px;
     background: url(../img/LOG0.png) no-repeat ;
     background-position:center center;
+    background-size: contain;
     background-color: #F0F0F0;
 	}
 	.bookImg_S {
@@ -884,12 +882,14 @@
     height: 174px;
     background: url(../img/LOG0.png) no-repeat ;
     background-position:center center;
+    background-size: contain;
     background-color: #F0F0F0;
 	}
 	.bookImg_L {
     width:157px;height: 236px;
     background: url(../img/LOG0.png) no-repeat ;
     background-position:center center;
+    background-size: contain;
     background-color: #F0F0F0;
   }
 	.bookImg_X {
@@ -897,5 +897,6 @@
     height: 435px;
     background: url(../img/LOG0.png) no-repeat ;
     background-position:center center;
+    background-size: contain;
     background-color: #F0F0F0;
   }
