--- a/view/user_info.html
+++ b/view/user_info.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="../css/main.css" /> 
   <link rel="stylesheet" href="../css/user_info.css" /> 
   <link rel="stylesheet" href="../css/headerOrFooter.css" />
+  <link rel="stylesheet" href="../css/Date.css"  />
+  <link rel="stylesheet" href="../css/font-awesome.min.css"  />
  </head> 
  <body id="app"> 
   <myheader :user-name.sync="userName" :login-img.sync="loginImg"></myheader>
