--- a/view/catalog.html
+++ b/view/catalog.html
@@ -112,7 +112,7 @@
               <ul class="mes_head">
                 <li class="mes_head_user" >
                   <a href="javascript:;" class="user_a" title="">浩浩荡荡荡乾坤</a>
-                <li><span class="user_comment"  title="">我是比企······我是比企谷八幡比企谷骄傲是看了的就爱上看了就快乐的骄傲是看了打赏谷八幡比企谷八</span> </li> 
+                <li><span class="user_comment"  title="">半涉浊流半席清，倚筝闲吟广陵文，寒剑默听君子意，傲视人间笑红尘</span> </li> 
                 <li>
                   <ul class="updata_mes">
                       <li class="mess1">2016-12-12</li>
