--- a/css/catalog.css
+++ b/css/catalog.css
@@ -363,16 +363,13 @@
 	}
 	.screen .works_a {
 		display: block;
-		width: 80px;
+		width: 70px;
 		overflow: hidden;
 		white-space: nowrap;
 		text-overflow: ellipsis;
 		color: #000000;
-		text-align:left;
-		padding-left:10px ;
-		
-		
-	}
+		text-align: center;
+  }
 	 .screen .works_b {
     display: block;
     width: 150px;
