--- a/view/ranking.html
+++ b/view/ranking.html
@@ -9,7 +9,7 @@
   	<link rel="stylesheet" href="../css/LOgin.css" />
   	<link rel="stylesheet" href="../css/jquery-ui.min.css" />
 	</head>
-	<body id="app">
+	<body id="app" v-show="bodyFlag" style="display: none;">
 	  <myheader></myheader>
 	  <div id="background"></div>
 	  <div id="Title">
@@ -50,7 +50,7 @@
 	  	</div>
 	  	<div class="content_ranking active" v-for="obj in result">
 	  		<h1>{{ ($index + 1) + ((RequestObj.pageNo - 1) * 12) }}</h1>
-	  		<a href="javascript:;"><img src="../img/Cover-map.jpg" :src="path.rootPath + obj.bookCoverImage" @click="gotoBook(obj.bookId)"/></a>
+	  		<a href="javascript:;"><img src="../img/z-imgBj.jpg" @load="szxj.loadImg(temp.bookCoverImage ? path.rootPath + temp.bookCoverImage: '', $event)" @click="gotoBook(obj.bookId)"/></a>
 	  		<ul>
 	  			<li><a href="javascript:;" class="content_a" title="{{obj.bookName}}"><span @click="gotoBook(obj.bookId)">{{obj.bookName}}</span></a></li>
 	  			<li>作者：{{obj.author}}</li>
@@ -178,6 +178,7 @@
 			  },
   		},
 			ready: function() {
+			  this.bodyFlag = true;
 			  SZXJ.http('get', PathList.queryBookType, {}, (response) => {
           this.bookInfo = response.data;
         });
