--- a/view/user_info.html
+++ b/view/user_info.html
@@ -90,6 +90,9 @@
  <script src="../js/apis/vueHttp.js"></script>
  <script src="../js/apis/conf.js"></script>
  <script src="../js/apis/Data.js"></script>
+ <script src="../js/apis/alert.js"></script>
+ <script src="../js/apis/confirm.js"></script>
+ 
  <script src="../js/components/works.js"></script> 
  <script src="../js/components/works.js"></script>
  <script src="../js/components/worksUpdate.js"></script>
